@@ -1068,24 +1068,6 @@ name|server
 operator|.
 name|nodemanager
 operator|.
-name|NodeManagerEventType
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|yarn
-operator|.
-name|server
-operator|.
-name|nodemanager
-operator|.
 name|NMAuditLogger
 operator|.
 name|AuditConstants
@@ -2644,12 +2626,8 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|cleanUpApplications
-argument_list|(
-name|NodeManagerEventType
-operator|.
-name|SHUTDOWN
-argument_list|)
+name|cleanUpApplicationsOnNMShutDown
+argument_list|()
 expr_stmt|;
 block|}
 block|}
@@ -2700,14 +2678,11 @@ name|serviceStop
 argument_list|()
 expr_stmt|;
 block|}
-DECL|method|cleanUpApplications (NodeManagerEventType eventType)
+DECL|method|cleanUpApplicationsOnNMShutDown ()
 specifier|public
 name|void
-name|cleanUpApplications
-parameter_list|(
-name|NodeManagerEventType
-name|eventType
-parameter_list|)
+name|cleanUpApplicationsOnNMShutDown
+parameter_list|()
 block|{
 name|Map
 argument_list|<
@@ -2788,14 +2763,6 @@ argument_list|(
 literal|"Waiting for Applications to be Finished"
 argument_list|)
 expr_stmt|;
-switch|switch
-condition|(
-name|eventType
-condition|)
-block|{
-case|case
-name|SHUTDOWN
-case|:
 name|long
 name|waitStartTime
 init|=
@@ -2849,58 +2816,6 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-break|break;
-case|case
-name|RESYNC
-case|:
-while|while
-condition|(
-operator|!
-name|applications
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-try|try
-block|{
-name|Thread
-operator|.
-name|sleep
-argument_list|(
-literal|1000
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|ex
-parameter_list|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Interrupted while sleeping on applications finish on resync"
-argument_list|,
-name|ex
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-break|break;
-default|default:
-throw|throw
-operator|new
-name|YarnRuntimeException
-argument_list|(
-literal|"Get an unknown NodeManagerEventType: "
-operator|+
-name|eventType
-argument_list|)
-throw|;
-block|}
 comment|// All applications Finished
 if|if
 condition|(
@@ -2927,6 +2842,171 @@ argument_list|(
 literal|"Done waiting for Applications to be Finished. Still alive: "
 operator|+
 name|applications
+operator|.
+name|keySet
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|method|cleanupContainersOnNMResync ()
+specifier|public
+name|void
+name|cleanupContainersOnNMResync
+parameter_list|()
+block|{
+name|Map
+argument_list|<
+name|ContainerId
+argument_list|,
+name|Container
+argument_list|>
+name|containers
+init|=
+name|context
+operator|.
+name|getContainers
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|containers
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Containers still running on "
+operator|+
+name|CMgrCompletedContainersEvent
+operator|.
+name|Reason
+operator|.
+name|ON_NODEMANAGER_RESYNC
+operator|+
+literal|" : "
+operator|+
+name|containers
+operator|.
+name|keySet
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|ContainerId
+argument_list|>
+name|containerIds
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|ContainerId
+argument_list|>
+argument_list|(
+name|containers
+operator|.
+name|keySet
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Waiting for containers to be killed"
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|CMgrCompletedContainersEvent
+argument_list|(
+name|containerIds
+argument_list|,
+name|CMgrCompletedContainersEvent
+operator|.
+name|Reason
+operator|.
+name|ON_NODEMANAGER_RESYNC
+argument_list|)
+argument_list|)
+expr_stmt|;
+while|while
+condition|(
+operator|!
+name|containers
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+try|try
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+name|nodeStatusUpdater
+operator|.
+name|getNodeStatusAndUpdateContainersInContext
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|ex
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Interrupted while sleeping on container kill on resync"
+argument_list|,
+name|ex
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|// All containers killed
+if|if
+condition|(
+name|containers
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"All containers in DONE state"
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Done waiting for containers to be killed. Still alive: "
+operator|+
+name|containers
 operator|.
 name|keySet
 argument_list|()
@@ -5268,7 +5348,7 @@ throw|throw
 operator|new
 name|YarnRuntimeException
 argument_list|(
-literal|"Get an unknown ContainerManagerEvent type: "
+literal|"Got an unknown ContainerManagerEvent type: "
 operator|+
 name|event
 operator|.
