@@ -1135,6 +1135,11 @@ import|;
 end_import
 
 begin_class
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"rawtypes"
+argument_list|)
 DECL|class|TestNodeStatusUpdater
 specifier|public
 class|class
@@ -2602,11 +2607,6 @@ name|MyNodeStatusUpdater4
 extends|extends
 name|NodeStatusUpdaterImpl
 block|{
-DECL|field|context
-specifier|private
-name|Context
-name|context
-decl_stmt|;
 DECL|field|rmStartIntervalMS
 specifier|private
 specifier|final
@@ -2657,12 +2657,6 @@ name|healthChecker
 argument_list|,
 name|metrics
 argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|context
-operator|=
-name|context
 expr_stmt|;
 name|this
 operator|.
@@ -2730,10 +2724,6 @@ argument_list|,
 operator|new
 name|MyResourceTracker6
 argument_list|(
-name|this
-operator|.
-name|context
-argument_list|,
 name|rmStartIntervalMS
 argument_list|,
 name|rmNeverStart
@@ -4563,12 +4553,6 @@ name|MyResourceTracker6
 implements|implements
 name|ResourceTracker
 block|{
-DECL|field|context
-specifier|private
-specifier|final
-name|Context
-name|context
-decl_stmt|;
 DECL|field|rmStartIntervalMS
 specifier|private
 name|long
@@ -4585,13 +4569,10 @@ specifier|final
 name|long
 name|waitStartTime
 decl_stmt|;
-DECL|method|MyResourceTracker6 (Context context, long rmStartIntervalMS, boolean rmNeverStart)
+DECL|method|MyResourceTracker6 (long rmStartIntervalMS, boolean rmNeverStart)
 specifier|public
 name|MyResourceTracker6
 parameter_list|(
-name|Context
-name|context
-parameter_list|,
 name|long
 name|rmStartIntervalMS
 parameter_list|,
@@ -4599,12 +4580,6 @@ name|boolean
 name|rmNeverStart
 parameter_list|)
 block|{
-name|this
-operator|.
-name|context
-operator|=
-name|context
-expr_stmt|;
 name|this
 operator|.
 name|rmStartIntervalMS
@@ -5519,20 +5494,13 @@ annotation|@
 name|Override
 specifier|public
 name|void
-name|cleanUpApplications
-parameter_list|(
-name|NodeManagerEventType
-name|eventType
-parameter_list|)
+name|cleanUpApplicationsOnNMShutDown
+parameter_list|()
 block|{
 name|super
 operator|.
-name|cleanUpApplications
-argument_list|(
-name|NodeManagerEventType
-operator|.
-name|SHUTDOWN
-argument_list|)
+name|cleanUpApplicationsOnNMShutDown
+argument_list|()
 expr_stmt|;
 name|numCleanups
 operator|.
@@ -7232,20 +7200,13 @@ annotation|@
 name|Override
 specifier|public
 name|void
-name|cleanUpApplications
-parameter_list|(
-name|NodeManagerEventType
-name|eventType
-parameter_list|)
+name|cleanUpApplicationsOnNMShutDown
+parameter_list|()
 block|{
 name|super
 operator|.
-name|cleanUpApplications
-argument_list|(
-name|NodeManagerEventType
-operator|.
-name|SHUTDOWN
-argument_list|)
+name|cleanUpApplicationsOnNMShutDown
+argument_list|()
 expr_stmt|;
 name|numCleanups
 operator|.
